update dmu26_ SA13_XMM-13hr_SSDF_HDFN

--- a/dmu26/dmu26_XID+PACS_EGS/XID+PACS_prior_LDust.ipynb
+++ b/dmu26/dmu26_XID+PACS_EGS/XID+PACS_prior_LDust.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=1182503</i>\n",
-       "<table id=\"table139649582897808\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139942346619480\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>help_id</th><th>bayes.stellar.m_star</th><th>bayes.stellar.m_star_err</th><th>bayes.sfh.sfr10Myrs</th><th>bayes.sfh.sfr10Myrs_err</th><th>bayes.dust.luminosity</th><th>bayes.dust.luminosity_err</th><th>bayes.dust.mass</th><th>bayes.dust.mass_err</th><th>bayes.dust.qpah</th><th>bayes.dust.qpah_err</th><th>bayes.dust.umin</th><th>bayes.dust.umin_err</th><th>bayes.attenuation.bessell_b</th><th>bayes.attenuation.bessell_b_err</th><th>bayes.attenuation.galex_fuv</th><th>bayes.attenuation.galex_fuv_err</th><th>bayes.attenuation.slope_BC</th><th>bayes.attenuation.slope_BC_err</th><th>bayes.attenuation.BC_to_ISM_factor</th><th>bayes.attenuation.BC_to_ISM_factor_err</th><th>bayes.attenuation.slope_ISM</th><th>bayes.attenuation.slope_ISM_err</th><th>bayes.sfh.tau_main</th><th>bayes.sfh.tau_main_err</th><th>bayes.sfh.age</th><th>bayes.sfh.age_err</th><th>bayes.sfh.burst_age</th><th>bayes.sfh.burst_age_err</th><th>bayes.sfh.f_burst</th><th>bayes.sfh.f_burst_err</th><th>best.chi_square</th><th>best.reduced_chi_square</th><th>best.attenuation.Av_BC</th><th>best.attenuation.BC_to_ISM_factor</th><th>best.attenuation.bessell_b</th><th>best.attenuation.galex_fuv</th><th>best.attenuation.slope_BC</th><th>best.attenuation.slope_ISM</th><th>best.attenuation.stellar.old</th><th>best.attenuation.stellar.young</th><th>best.dust.alpha</th><th>best.dust.gamma</th><th>best.dust.luminosity</th><th>best.dust.mass</th><th>best.dust.qpah</th><th>best.dust.umin</th><th>best.lyc_absorption_f_dust</th><th>best.lyc_absorption_f_esc</th><th>best.sfh.age</th><th>best.sfh.burst_age</th><th>best.sfh.f_burst</th><th>best.sfh.integrated</th><th>best.sfh.sfr</th><th>best.sfh.sfr100Myrs</th><th>best.sfh.sfr10Myrs</th><th>best.sfh.tau_burst</th><th>best.sfh.tau_main</th><th>best.stellar.age_m_star</th><th>best.stellar.imf</th><th>best.stellar.lum_ly</th><th>best.stellar.lum_ly_old</th><th>best.stellar.lum_ly_young</th><th>best.stellar.m_gas</th><th>best.stellar.m_gas_old</th><th>best.stellar.m_gas_young</th><th>best.stellar.m_star</th><th>best.stellar.m_star_old</th><th>best.stellar.m_star_young</th><th>best.stellar.metallicity</th><th>best.stellar.n_ly</th><th>best.stellar.n_ly_old</th><th>best.stellar.n_ly_young</th><th>best.stellar.old_young_separation_age</th><th>best.universe.age</th><th>best.universe.luminosity_distance</th><th>best.universe.redshift</th><th>best.mmt_u</th><th>best.megacam_u</th><th>best.cfht12k_b</th><th>best.mmt_g</th><th>best.suprime_g</th><th>best.90prime_g</th><th>best.megacam_g</th><th>best.gpc1_g</th><th>best.acs_f606w</th><th>best.suprime_r</th><th>best.gpc1_r</th><th>best.megacam_r</th><th>best.90prime_r</th><th>best.suprime_rc</th><th>best.cfht12k_r</th><th>best.gpc1_i</th><th>best.megacam_i</th><th>best.suprime_i</th><th>best.mmt_i</th><th>best.acs_f814w</th><th>best.cfht12k_i</th><th>best.gpc1_z</th><th>best.megacam_z</th><th>best.suprime_z</th><th>best.mmt_z</th><th>best.mosaic_z</th><th>best.gpc1_y</th><th>best.suprime_y</th><th>best.nicmos_f110w</th><th>best.wircs_j</th><th>best.omega2000_j</th><th>best.ukidss_j</th><th>best.newfirm_j3</th><th>best.newfirm_j1</th><th>best.newfirm_j2</th><th>best.wfc3_f125w</th><th>best.wircam_j</th><th>best.wfc3_f140w</th><th>best.wfc3_f160w</th><th>best.nicmos_f160w</th><th>best.wircam_h</th><th>best.newfirm_h2</th><th>best.newfirm_h1</th><th>best.omega2000_ks</th><th>best.newfirm_k</th><th>best.wircs_k</th><th>best.moircs_ks</th><th>best.wircam_ks</th><th>best.irac_i1</th><th>best.irac_i2</th><th>best.irac_i3</th><th>best.irac_i4</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -175,7 +175,7 @@
        "HELP_J142916.094+532900.856   1345253793.2442424 ... 0.00031015008687833014"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=1183490</i>\n",
-       "<table id=\"table139649581004896\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139942348487200\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>help_id</th><th>RA</th><th>DEC</th><th>id</th><th>z1_median</th><th>z1_min</th><th>z1_max</th><th>z1_area</th><th>z2_median</th><th>z2_min</th><th>z2_max</th><th>z2_area</th><th>za_hb</th><th>chi_r_eazy</th><th>chi_r_atlas</th><th>chi_r_cosmos</th><th>chi_r_stellar</th><th>stellar_type</th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bytes6</th></tr></thead>\n",
        "<tr><td>HELP_J141604.525+522314.318</td><td>214.01885343855852</td><td>52.38731062037661</td><td>1</td><td>0.3287</td><td>0.2017</td><td>0.46</td><td>0.79</td><td>-99.0</td><td>-99.0</td><td>-99.0</td><td>-99.0</td><td>0.3107445158917243</td><td>0.00941402</td><td>0.005750465</td><td>0.038778125</td><td>1.16068175</td><td>k4i</td></tr>\n",
@@ -263,7 +263,7 @@
        "HELP_J141505.314+515819.053 213.77214140424604 ...             "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -421,16 +421,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f02b36f26a0>"
+       "<matplotlib.colorbar.Colorbar at 0x7f46db5fa550>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -555,18 +555,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 1525656\n",
-      "drwxr-xr-x@ 3 pdh21  pdh21   102B 14 Feb 16:33 \u001b[34mdata\u001b[m\u001b[m/\n",
-      "-rw-rw-r--  1 pdh21  pdh21    41K 15 Feb 11:16 XID+PACS_prior.ipynb\n",
-      "-rw-rw-r--  1 pdh21  pdh21    18K 15 Feb 11:25 Tiles.pkl\n",
-      "-rw-rw-r--  1 pdh21  pdh21   745M 15 Feb 11:25 Master_prior.pkl\n"
+      "total 2.2M\n",
+      "-rw-r--r-- 1 mc741 mc741 142K Feb  8  2019 XID+PACS_EGS_final_processing.ipynb\n",
+      "-rw-r--r-- 1 mc741 mc741  294 Feb 22  2019 meta_main.yml\n",
+      "-rw-r--r-- 1 mc741 mc741  448 Feb 22  2019 meta_survey.yml\n",
+      "-rw-r--r-- 1 mc741 mc741 4.7K Feb 22  2019 README.md\n",
+      "-rwxr-xr-x 1 mc741 mc741  560 Feb 22  2019 \u001b[0m\u001b[01;32mXID_plus_hier.sh\u001b[0m*\n",
+      "-rw-r--r-- 1 mc741 mc741 2.2K Feb 22  2019 make_combined_map.py\n",
+      "-rwxr-xr-x 1 mc741 mc741  388 Feb 27  2019 \u001b[01;32mXID_plus_tile.sh\u001b[0m*\n",
+      "-rw-r--r-- 1 mc741 mc741  69K Oct 10 11:40 XID+PACS_prior.ipynb\n",
+      "-rwxr-xr-x 1 mc741 mc741 2.9K Oct 10 12:12 \u001b[01;32mXIDp_run_script_pacs_tile.py\u001b[0m*\n",
+      "-rw-r--r-- 1 mc741 mc741 1.8M Oct 10 12:13 XID+PACS.pkl\n",
+      "drwxr-xr-x 4 mc741 mc741 4.0K Oct 10 12:26 \u001b[01;34mdata\u001b[0m/\n",
+      "-rw-r--r-- 1 mc741 mc741 134K Oct 10 14:06 XID+PACS_prior_LDust.ipynb\n"
      ]
     }
    ],
