--- a/dmu28/dmu28_SA13/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SA13/CIGALE_catalogue_preparation.ipynb
@@ -111,7 +111,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of good sources: 120\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
@@ -285,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 61\n"
+      "Number of sources with z-spec: 6\n"
      ]
     }
    ],
@@ -363,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
