DESI photoz ready to run when DR8 ingested

--- a/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
+++ b/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "The HELP field and hp_idx are made in this notebook.\n",
     "\n",
-    "We later decided it would be advantageous to include all columns"
+    "We later decided it would be advantageous to include all columns. Given the large size of the tables some of the work must be done with stilts."
    ]
   },
   {
@@ -51,8 +51,8 @@
     "#Load a smaller version with just required fields made using Stilts\n",
     "#stilts tpipe cmd='keepcols \"ID RA DEC photo_z photo_zerr spec_z\"' \n",
     "#./data/dr6dr7_photoz_csp_totcat.fits omode=out out=./data/dr6dr7_reduced.fits\n",
-    "full_tab='./data/dr6dr7_photoz_csp_totcat.fits'\n",
-    "small_tab='./data/dr6dr7_reduced.fits'\n",
+    "\n",
+    "small_tab='./data/LS_DR8_total_csp_reduced.fits'\n",
     "desi = Table.read(small_tab)['ID', 'RA', 'DEC'] #, 'photo_z', 'photo_zerr', 'spec_z']\n",
     "#desi = Table.read(full_tab)"
    ]
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "desi.write('./data/desi_for_vo_1.fits', overwrite = True)"
+    "#desi.write('./data/desi_for_vo_1.fits', overwrite = True)"
    ]
   },
   {
@@ -112,7 +112,17 @@
    "source": [
     "#cols = ['field', 'desi_id', 'ra', 'dec', 'hp_idx', 'redshift', 'redshift_err', 'zspec']\n",
     "#cols = ['field', 'ID', 'RA', 'DEC', 'hp_idx', 'photo_z', 'photo_zerr', 'spec_z']\n",
-    "desi.write('./data/desi_for_vo_2.fits', overwrite = True)"
+    "desi['field', 'hp_idx'].write('./data/desi_for_vo_temp.fits', overwrite = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#You then need to stack the tables using stilts with:\n",
+    "#stilts tjoin nin=2 in1=LS_DR8_total_csp.fits in2=desi_for_vo_temp.fits out=combined.csv"
    ]
   }
  ],
@@ -133,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
