--- a/dmu24/dmu24_AKARI-SEP/Make_cat_from_DESI_LagacyDR8.ipynb
+++ b/dmu24/dmu24_AKARI-SEP/Make_cat_from_DESI_LagacyDR8.ipynb
@@ -55,15 +55,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "field = 'AKARI-SEP'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "cross_query = \"\"\"\n",
-    "SELECT DISTINCT\n",
-    "    db.field\n",
+    "SELECT\n",
+    "    db.ID,\n",
+    "    db.RA,\n",
+    "    db.DEC,\n",
+    "    db.field,\n",
+    "    db.photo_z,\n",
+    "    db.photo_zerr\n",
     "FROM desi_photoz.main AS db\n",
-    "\"\"\"\n",
+    "WHERE db.field = '{}'\n",
+    "\"\"\".format(field)\n",
     "\n",
     "# construct a service; I’ve taken the URL from TOPCAT’s\n",
     "# TAP service browser # (\"Selected TAP Service\" near the\n",
@@ -127,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "desi_photoz.write('./data/ELAIS-N2_DESI-DR7_Zou_et_al_2019_photo_z.fits', overwrite=True)"
+    "desi_photoz.write('./data/{}_DESI-DR8_Zou_et_al_2019_photo_z.fits'.format(field), overwrite=True)"
    ]
   },
   {
@@ -200,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ml = Table.read('../../dmu1/dmu1_ml_ELAIS-N2/data/master_catalogue_elais-n2_20180218.fits')"
+    "ml = Table.read('../../dmu1/dmu1_ml_AKARI-SEP/data/master_catalogue_akari-sep_20180221.fits')"
    ]
   },
   {
@@ -329,7 +344,7 @@
     "photoz = photoz.filled()\n",
     "has_help = photoz['help_id'] != ''\n",
     "has_z = ~np.isnan(photoz['photo_z'])\n",
-    "photoz[has_help & has_z].write('./data/ELAIS-N2_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits', overwrite=True)"
+    "photoz[has_help & has_z].write('./data/{}_DESI-DR8_Zou_et_al_2019_photo_z_withhelp_id.fits'.format(field), overwrite=True)"
    ]
   },
   {
@@ -422,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
