--- a/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
@@ -146,7 +146,16 @@
    "outputs": [],
    "source": [
     "# best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue.copy()"
+    "best_catalogue = master_catalogue[optnir].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]"
    ]
   },
   {
@@ -230,7 +239,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\", overwrite=True)"
+    "best_catalogue.write(\"data_tmp/AKARI-SEP_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -259,8 +268,8 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
+    "best_catalogue.remove_column(\"redshift\")\n",
+    "best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
@@ -345,6 +354,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
@@ -360,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
