--- a/dmu24/dmu24_AKARI-SEP/Make_cat_from_DESI_LagacyDR8.ipynb
+++ b/dmu24/dmu24_AKARI-SEP/Make_cat_from_DESI_LagacyDR8.ipynb
@@ -63,10 +63,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "cross_query = \"\"\"\n",
     "SELECT\n",
@@ -89,18 +87,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Job COMPLETED running after 789 seconds.\n"
-     ]
-    }
-   ],
    "source": [
     "job = service.submit_job(cross_query)\n",
     "job.run()\n",
@@ -120,20 +108,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converting column field type from object to string\n"
-     ]
-    }
-   ],
    "source": [
     "desi_photoz = clean_table(desi_photoz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Open small file containing only id ra dec field photo_z photo_zerr\n",
+    "desi_photoz = Table.read('../../dmu0/dmu0_DESI/data/dr8_red.fits')\n",
+    "desi_photoz = desi_photoz[desi_photoz['field'] == field]"
    ]
   },
   {
