Fix issue with pacs flags

--- a/dmu28/dmu28_AKARI-NEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_AKARI-NEP/CIGALE_catalogue_preparation.ipynb
@@ -81,7 +81,12 @@
    "source": [
     "good = {}\n",
     "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "    \n",
+    "    #For some reason there are no PACS flags\n",
+    "    if band.startswith('pacs'):\n",
+    "        good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]))\n",
+    "    else:\n",
+    "        good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
     "                                   ~master_catalogue['flag_{}'.format(band)])\n",
     "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
     "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
@@ -361,6 +366,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
