Made SPIRE NEP input with all sources

--- a/dmu28/dmu28_SPIRE-NEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SPIRE-NEP/CIGALE_catalogue_preparation.ipynb
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "#best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue[optnir].copy()"
+    "best_catalogue = master_catalogue.copy()"
    ]
   },
   {
@@ -238,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/SPIRE-NEP_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/SPIRE-NEP_cigale_all_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -256,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[optnir].copy()"
+    "best_catalogue = master_catalogue.copy()"
    ]
   },
   {
@@ -293,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 0\n"
+      "Number of sources with z-spec: 1\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/SPIRE-NEP_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/SPIRE-NEP_cigale_all_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
