AKARI-SEP ready for final CIGALE run

--- a/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
@@ -112,7 +112,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of good sources: 946\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
@@ -291,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 236\n"
+      "Number of sources with z-spec: 71\n"
      ]
     }
    ],
@@ -369,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
