--- a/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
@@ -82,7 +82,7 @@
     "# # XID+ MIPS24\n",
     "\n",
     "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_AKARI-SEP/data/\"\n",
-    "                          \"dmu26_XID+MIPS_AKARI-SEP_cat_?????.fits\")\n",
+    "                          \"dmu26_XID+MIPS_AKARI-SEP_cat_20190909.fits\")\n",
     "xid_mips24.meta = None\n",
     "\n",
     "# Adding the error column\n",
@@ -107,7 +107,7 @@
     "# XID+ PACS\n",
     "\n",
     "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_AKARI-SEP/data/\"\n",
-    "                        \"dmu26_XID+PACS_AKARI-SEP_cat_??????.fits\")\n",
+    "                        \"dmu26_XID+PACS_AKARI-SEP_cat_20190924.fits\")\n",
     "xid_pacs.meta = None\n",
     "\n",
     "# Convert from mJy to μJy\n",
@@ -149,7 +149,7 @@
     "# # XID+ SPIRE\n",
     "\n",
     "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_AKARI-SEP/data/\"\n",
-    "                         \"dmu26_XID+SPIRE_AKARI-SEP_cat_??????.fits\")\n",
+    "                         \"dmu26_XID+SPIRE_AKARI-SEP_cat_20190916.fits\")\n",
     "xid_spire.meta = None\n",
     "\n",
     "xid_spire['HELP_ID'].name = \"help_id\"\n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -600,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
