--- a/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
@@ -42,7 +42,7 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE = True\n",
-    "MAKE_FINAL = False\n",
+    "MAKE_FINAL = True\n",
     "\n",
     "SUFFIX = '20180501'"
    ]
@@ -389,7 +389,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_XMM-13hr/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_XMM-13hr/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -521,7 +521,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
