--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -27,7 +27,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-10-29 20:08:05.015361\n"
+      "2019-10-31 16:35:45.741289\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140382777510208-902037\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139872507573024-580361\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td></tr>\n",
@@ -158,14 +158,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140382777510208-902037').dataTable()\");\n",
+       "    console.log(\"$('#table139872507573024-580361').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140382777510208-902037').dataTable({\n",
+       "    $('#table139872507573024-580361').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -507,7 +507,7 @@
       "0 dmu_products/dmu26/dmu26_XID+SPIRE_XMM-13hr/data/dmu26_XID+SPIRE_XMM-13hr_cat_20191025.fits ../dmu26/dmu26_XID+SPIRE_XMM-13hr/data/dmu26_XID+SPIRE_XMM-13hr_cat_20191025.fits\n",
       "  - xid: dmu_products/dmu26/dmu26_XID+SPIRE_XMM-13hr/data/dmu26_XID+SPIRE_XMM-13hr_cat_20191025.fits\n",
       "  - photoz: dmu_products/dmu24/dmu24_XMM-13hr/data/XMM-13hr_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits\n",
-      "  - cigale not done.\n",
+      "  - cigale: dmu_products/dmu28/dmu28_XMM-13hr/data/zphot/HELP_final_results.fits\n",
       "XMM-LSS:\n",
       "0 dmu_products/dmu26/dmu26_XID+MIPS_XMM-LSS/data/dmu26_XID+MIPS_XMM-LSS_SPUDS_cat_20181210.fits ../dmu26/dmu26_XID+MIPS_XMM-LSS/data/dmu26_XID+MIPS_XMM-LSS_SPUDS_cat_20181210.fits\n",
       "  - xid: dmu_products/dmu26/dmu26_XID+MIPS_XMM-LSS/data/dmu26_XID+MIPS_XMM-LSS_SPUDS_cat_20181210.fits\n",
@@ -571,7 +571,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140382694304232-729958\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139872507327992-887684\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th><th>xid_objects</th><th>photoz_objects</th><th>cigale_objects</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td><td>35319</td><td>107241</td><td>0</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td><td>211453</td><td>139070</td><td>0</td></tr>\n",
@@ -594,7 +594,7 @@
        "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.1280660469377391</td><td>1203840</td><td>1.2 MB</td><td>0</td><td>935</td><td>0</td></tr>\n",
        "<tr><td>19</td><td>SSDF</td><td>20180221</td><td>20180221</td><td>12661903</td><td>111.11624949343539</td><td>8078319360</td><td>8.08 GB</td><td>0</td><td>9268783</td><td>0</td></tr>\n",
        "<tr><td>20</td><td>xFLS</td><td>20180501</td><td>20180501</td><td>977148</td><td>7.44043242140754</td><td>1050474240</td><td>1.05 GB</td><td>52187</td><td>101282</td><td>5944</td></tr>\n",
-       "<tr><td>21</td><td>XMM-13hr</td><td>20180501</td><td>20180501</td><td>38629</td><td>0.7570240166583633</td><td>10676160</td><td>10.68 MB</td><td>3563</td><td>10777</td><td>0</td></tr>\n",
+       "<tr><td>21</td><td>XMM-13hr</td><td>20180501</td><td>20180501</td><td>38629</td><td>0.7570240166583633</td><td>10676160</td><td>10.68 MB</td><td>3563</td><td>10777</td><td>670</td></tr>\n",
        "<tr><td>22</td><td>XMM-LSS</td><td>20190328</td><td>20190328</td><td>8705837</td><td>21.75457939331374</td><td>28241838720</td><td>28.24 GB</td><td>287599</td><td>6152920</td><td>61892</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
@@ -619,14 +619,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140382694304232-729958').dataTable()\");\n",
+       "    console.log(\"$('#table139872507327992-887684').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140382694304232-729958').dataTable({\n",
+       "    $('#table139872507327992-887684').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -662,8 +662,8 @@
       "      This is a total of 10800251 objects with an average of 7% of objects on processed areas.\n",
       "Photo-zs: There are 23 fields with photozs computed totalling 1269.11 square degrees.\n",
       "      This is a total of 94338384 objects with an average of 55% of objects on processed areas.\n",
-      "CIGALE SEDs: There are 14 fields with SEDs computed totalling 771.46 square degrees.\n",
-      "      This is a total of 1154207 objects with an average of 1% of objects on processed areas.\n"
+      "CIGALE SEDs: There are 15 fields with SEDs computed totalling 772.22 square degrees.\n",
+      "      This is a total of 1154877 objects with an average of 1% of objects on processed areas.\n"
      ]
     }
    ],
